KSENROLL-13414 : UI Issue - Set of Courses Text Alignment
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@74348 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -2199,6 +2199,11 @@ section.uif-disclosure {
 padding-left: 0px !important;
 }
 
+//Fix KSENROLL-13414
+.uif-tableNoPadding > table > tbody > tr > th> label  {
+  white-space: nowrap !important;
+}
+
 
 //Fix KSENROLL-14118
 .uif-comment-metaData-item-title {
